--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea
 web/support/*
 logs
+*.xls
 
 
 ### Django ###
@@ -16,6 +17,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+media_root
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
